--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -6,6 +6,14 @@
     .intro .slogan h2 ,.section-heading h2 {
         font-size: 35px;
     }
+
+    @media (max-width: 600px) {
+        .intro .slogan h2 {
+            z-index: 9;
+            font-size: 26px;
+        }
+    }
+
 </style>
 
     <!-- Section: intro -->
@@ -60,11 +68,132 @@
 
 
 
-                <div class="col-lg-3 p-3">
+
+
+
+
+
+
+
+
+
+                {#<!-- be -->#}
+                {#<style>#}
+                    {#section .style-gray, .offcanvas-pane .style-gray, .card .style-gray, section.style-gray, .offcanvas-pane.style-gray, .card.style-gray {#}
+                        {#background-color: #535858;#}
+                        {#border-color: #535858;#}
+                        {#color: #ffffff;#}
+                    {#}#}
+                    {#.card-type-pricing .list-unstyled li {#}
+                        {#padding: 15px 30px;#}
+                        {#border-top: 1px solid #e5e6e6;#}
+                    {#}#}
+                {#</style>#}
+                        {#<!-- BEGIN PRICING CARDS 1 -->#}
+
+                            {#<div class="col-md-3">#}
+                                {#<div class="card card-type-pricing text-center">#}
+                                    {#<div class="card-body style-gray">#}
+                                        {#<h2 class="text-light">Basic</h2>#}
+                                        {#<div class="price">#}
+                                            {#<center><img src="/main/img/_01.png"  style=" width: 172px;"  alt="" class="img-responsive img-circle" /></center>#}
+                                        {#</div>#}
+                                        {#<br/>#}
+                                        {#<p class="opacity-50"><em>Rame aute irure dolor in reprehenderit pariatur.</em></p>#}
+                                    {#</div><!--end .card-body -->#}
+                                    {#<div class="card-body no-padding">#}
+                                        {#<ul class="list-unstyled">#}
+                                            {#<li>20 Pages</li>#}
+                                            {#<li>100 GB Bandwidth</li>#}
+                                            {#<li>1 GB Storage</li>#}
+                                            {#<li>24/7 Customer Support</li>#}
+                                        {#</ul>#}
+                                    {#</div><!--end .card-body -->#}
+                                    {#<div class="card-body">#}
+                                        {#<a class="btn btn-default">Sign up</a>#}
+                                    {#</div><!--end .card-body -->#}
+                                {#</div><!--end .card -->#}
+                            {#</div><!--end .col -->#}
+                            {#<div class="col-md-3">#}
+                                {#<div class="card card-type-pricing text-center">#}
+                                    {#<div class="card-body style-gray">#}
+                                        {#<h2 class="text-light">Standard</h2>#}
+                                        {#<div class="price">#}
+                                            {#<span class="text-lg">$</span><h2><span class="text-xxxl">15</span></h2> <span>/mo</span>#}
+                                        {#</div>#}
+                                        {#<br/>#}
+                                        {#<p class="opacity-50"><em>Rame aute irure dolor in reprehenderit pariatur.</em></p>#}
+                                    {#</div><!--end .card-body -->#}
+                                    {#<div class="card-body no-padding">#}
+                                        {#<ul class="list-unstyled">#}
+                                            {#<li>40 Pages</li>#}
+                                            {#<li>200 GB Bandwidth</li>#}
+                                            {#<li>2 GB Storage</li>#}
+                                            {#<li>24/7 Customer Support</li>#}
+                                        {#</ul>#}
+                                    {#</div><!--end .card-body -->#}
+                                    {#<div class="card-body">#}
+                                        {#<a class="btn btn-default">Sign up</a>#}
+                                    {#</div><!--end .card-body -->#}
+                                {#</div><!--end .card -->#}
+                            {#</div><!--end .col -->#}
+                            {#<div class="col-md-3">#}
+                                {#<div class="card card-type-pricing text-center">#}
+                                    {#<div class="card-body style-primary">#}
+                                        {#<h2 class="text-light">Pro</h2>#}
+                                        {#<div class="price">#}
+                                            {#<span class="text-lg">$</span><h2><span class="text-xxxl">28</span></h2> <span>/mo</span>#}
+                                        {#</div>#}
+                                        {#<br/>#}
+                                        {#<p class="opacity-50"><em>Rame aute irure dolor in reprehenderit pariatur.</em></p>#}
+                                    {#</div><!--end .card-body -->#}
+                                    {#<div class="card-body no-padding">#}
+                                        {#<ul class="list-unstyled">#}
+                                            {#<li>Unlimited</li>#}
+                                            {#<li>500 GB Bandwidth</li>#}
+                                            {#<li>6 GB Storage</li>#}
+                                            {#<li>24/7 Customer Support</li>#}
+                                        {#</ul>#}
+                                    {#</div><!--end .card-body -->#}
+                                    {#<div class="card-body">#}
+                                        {#<a class="btn btn-primary">Sign up</a>#}
+                                    {#</div><!--end .card-body -->#}
+                                {#</div><!--end .card -->#}
+                            {#</div><!--end .col -->#}
+                            {#<div class="col-md-3">#}
+                                {#<div class="card card-type-pricing text-center">#}
+                                    {#<div class="card-body style-gray">#}
+                                        {#<h2 class="text-light">Enterprise</h2>#}
+                                        {#<div class="price">#}
+                                            {#<span class="text-lg">$</span><h2><span class="text-xxxl">56</span></h2> <span>/mo</span>#}
+                                        {#</div>#}
+                                        {#<br/>#}
+                                        {#<p class="opacity-50"><em>Rame aute irure dolor in reprehenderit pariatur.</em></p>#}
+                                    {#</div><!--end .card-body -->#}
+                                    {#<div class="card-body no-padding">#}
+                                        {#<ul class="list-unstyled">#}
+                                            {#<li>Unlimited</li>#}
+                                            {#<li>1 TB Bandwidth</li>#}
+                                            {#<li>10 GB Storage</li>#}
+                                            {#<li>24/7 Customer Support</li>#}
+                                        {#</ul>#}
+                                    {#</div><!--end .card-body -->#}
+                                    {#<div class="card-body">#}
+                                        {#<a class="btn btn-default">Sign up</a>#}
+                                    {#</div><!--end .card-body -->#}
+                                {#</div><!--end .card -->#}
+                            {#</div><!--end .col -->#}
+                        {#<!--end .row -->#}
+                        {#<!-- END PRICING CARDS 1 -->#}
+
+                {#<!-- be -->#}
+
+
+                <div class="col-lg-3 p-3" style="    ">
                     <div class="wow bounceInUp" data-wow-delay="0.2s">
-                        <div class="team boxed-grey">
+                        <div class="team boxed-grey" style=" height: 373px;">
                             <div class="inner">
-                                <h5>Фондовый</h5>
+                                <h5>Фондовый</h5> <br /><br /><br />
                                 {#<p class="subtitle">Pixel Crafter</p>#}
                                 <div class="avatar">
                                     <center>
@@ -78,9 +207,9 @@
 
                 <div class="col-lg-3 p-3">
                     <div class="wow bounceInUp" data-wow-delay="0.2s">
-                        <div class="team boxed-grey">
+                        <div class="team boxed-grey" style=" height: 373px;">
                             <div class="inner">
-                                <h5>Робототезированая торговля <br />   (валютый робот)</h5>
+                                <h5>Робототезированая торговля <br />   (валютый робот)</h5> <br />
                                 {#<p class="subtitle">Pixel Crafter</p>#}
                                 <div class="avatar">
                                     <center>
@@ -93,7 +222,7 @@
                 </div>
                 <div class="col-lg-3 p-3">
                     <div class="wow bounceInUp" data-wow-delay="0.5s">
-                        <div class="team boxed-grey">
+                        <div class="team boxed-grey" style=" height: 373px;">
                             <div class="inner">
                                 <h5>Робототезированая торговля  <br /> (криптовалютый робот)</h5>
                                 {#<p class="subtitle">Ruby on Rails</p>#}
@@ -109,9 +238,9 @@
                 </div>
                 <div class="col-lg-3 p-3">
                     <div class="wow bounceInUp" data-wow-delay="0.8s">
-                        <div class="team boxed-grey">
+                        <div class="team boxed-grey" style=" height: 373px;">
                             <div class="inner">
-                                <h5>IPO</h5>
+                                <h5>IPO</h5><br /><br /><br />
                                 {#<p class="subtitle">jQuery Ninja</p>#}
                                 <div class="avatar">
                                     <center>
@@ -123,6 +252,13 @@
                         </div>
                     </div>
                 </div>
+
+
+
+
+
+
+
             </div>
         </div>
 
@@ -221,9 +357,9 @@
                     <thead>
                     <tr>
                         <th scope="col"> </th>
-                        <th scope="col"> Название </th>
+                        <th scope="col"> Название   </th>
                         <th scope="col"> Доходность </th>
-                        <th scope="col">   Подробней  </th>
+                        <th scope="col"> Подробней  </th>
                     </tr>
                     </thead>
                     <tbody style=" text-align: left;">
@@ -231,26 +367,47 @@
                         <th scope="row">1</th>
                         <td>Индивидуальное доверительное управление</td>
                         <td style="color:#335433;" > до 10-25%/мес  </td>
-                        <td>  <a href="/docs/1.zip">Открыть</a> </td>
+                        <td>
+                            <a href="/services/individual-management"> Открыть</a>
+                        </td>
                     </tr>
                     <tr>
                         <th scope="row">2</th>
                         <td>Роботизированная торговля</td>
                         <td style="color:#335433;"> 10-20% в месяц </td>
-                        <td>   <a href="#">Открыть</a>  </td>
+                        <td>
+
+                            {#<a href="#">Открыть</a>#}
+
+
+
+                            <a href="/services/robotic-trading"> Открыть</a>
+
+
+
+                        </td>
                     </tr>
                     <tr>
                         <th scope="row">3</th>
                         <td>Американские первичные акции (IPO)</td>
                         <td style="color:#335433;"> до 100% - годовых </td>
-                        <td>  <a href="/docs/ipo_doc.docx">Открыть</a> </td>
+                        <td>
+                            {#<a href="/docs/ipo_doc.docx">Открыть</a>#}
+
+
+                            <a href="/services/ipo">Открыть</a>
+
+
+
+
+                        </td>
                     </tr>
                     <tr>
                         <th scope="row">4</th>
                         <td>Инвестиции в недвижимость Тайланда</td>
                         <td style="color:#335433;" >  15% годовых  </td>
                         <td>
-                            <a href="/thailand/property-investments">Открыть</a>
+                            <a href="/services/thailand/property-investments">Открыть</a>
                             {#<a href="/docs/PH-V_LH_R.pdf">Открыть</a>  + <a href="/docs/attachments.zip">Фото</a>#}
                         </td>
                     </tr>
@@ -260,7 +417,7 @@
                         <td>Доходные автомобили Тайланда</td>
                         <td style="color:#335433;" > до 50% годовых </td>
                         <td>
-                            {#<a href="/thailand-property-investments">Открыть</a>#}
+                            <a href="/services/cars">Открыть</a>
                         </td>
                     </tr>
                     </tbody>
@@ -269,6 +426,26 @@
         </div>
     </section>
     <!-- /Section: services -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
