--- a/templates/services/ipo.html.twig
+++ b/templates/services/ipo.html.twig
@@ -53,8 +53,90 @@
                                                 <button onclick="location.href='/docs/ipo_doc.docx'" style="color: #f2f3f3;
                                     background-color: #4caf50;
                                     border-color: #4caf50;" type="button" class=" btn btn-block ink-reaction btn-default-bright" >
-                                                    Договор
+                                                    скачать версию в word.doc
                                                 </button>
+
+
+
+
+
+
+
+
+
+
+
+
+                                                <p>Портфель №3</p>
+                                                <p>«IPO»</p>
+                                                <p>Портфель №3 «IPO» создан для инвесторов, которые уже знают, чем отличаются инвестиции от спекуляции.</p>
+                                                <p>Ваши деньги умножаются с помощью такого инструмента, как рынок первичных американских акций Initial Public Offering или сокращенно IPO исключительно американских кампаний, вход на который ограничен значительным минимальным входом и порой не под силу инвестору                             с небольшой суммой депозита. Однако, компанией Global Big Bell был создан уникальный финансовый продукт – Портфель №3 «IPO», позволяющий входить в рынок всего от 1000 $ США со своего личного счета, открытого у американского брокера. А американский брокер – это прежде всего высокая надежность.</p>
+                                                <p>Мы поможем Вам использовать американские рынки первичных ценных бумаг с минимальными рисками, благодаря серьезной команде аналитиков и большому опыту торговли в этой сфере, инсайдам, которые мы одними из первых получаем, чтобы грамотно и эффективно управлять Вашим капиталом и получать максимальную доходность при минимальных рисках.</p>
+                                                <p>Преимущества:</p>
+                                                <p>•	Вход от 1000 $, когда везде минимум – от 10 000 $</p>
+                                                <p>•	Отсутствие комиссии при покупке и продаже акций*</p>
+                                                <p>•	Продать первичные акции можно уже на второй день после выхода на рынок</p>
+                                                <p>•	Ввод/вывод средств без комиссии*</p>
+                                                <p>•	Вам не нужно тратить время на изучение инструмента, доверяйте профессионалам.</p>
+
+                                                <p>Основные характеристики</p>
+                                                <p>Основные характеристики портфеля №2</p>
+                                                <p>Показатели</p>
+                                                <p>Доходность</p>
+                                                <p>до 100% - годовых</p>
+                                                <p>Риск</p>
+                                                <p>до 20-30 % от депо</p>
+                                                <p>Минимальная сумма входа</p>
+                                                <p>1000$</p>
+                                                <p>Частота выплат</p>
+                                                <p>На второй день после выхода акций на рынок</p>
+                                                <p>Минимальный срок работы портфеля</p>
+                                                <p>2 дня</p>
+                                                <p>Вывод тела депозита</p>
+                                                <p>да</p>
+                                                <p>Стратегия инвестирования</p>
+                                                <p>среднесрочная и долгосрочная</p>
+
+                                                <p>*Комиссия взимается брокером за брокерское обслуживание счета                     в размере 1,5 % от суммы депозита в месяц и 15% от суммы чистой прибыли (только при совершении успешных сделок).</p>
+                                                <p>Проект GBB оставляет за собой право удержания комиссии согласно договору и приложению к нему и распределения прибыли в  следующих пропорциях:</p>
+                                                <p>•	При сумме депозита до 10 000$ - 30/70%, где 70%-полагается инвестору;</p>
+                                                <p>•	При сумме депозита от 10 000$ до 50 000$ - 20/80%, где 80%-полагается инвестору;</p>
+                                                <p>•	При сумме депозита свыше 50 000$ - 10/90%, где 90%-полагается инвестору.</p>
+                                                <p>При этом, комиссионные должны быть переведены Инвестором на реквизиты компании GBB любым удобным доступным способом не позднее 5 дней                  с момента закрытия успешных сделок. В случае нарушения сроков Инвестор несет ответственность согласно договору.</p>
+                                                <p>Как зарегистрироваться в Портфель №2 «IPO»</p>
+                                                <p>ВАРИАНТ №1</p>
+                                                <p>Для регистрации в проекте Вам необходимо открыть счет в долларах в банке АО «Райффазенбанк» (ссылка https://www.raiffeisen.ru/retail/cards/debit/).</p>
+                                                <p>Далее прислать нам (ссылка на обратную форму) реквизиты счета и копию паспорта (фото+прописка).</p>
+                                                <p>После этого наш сотрудник открывает для Вас счет в брокере Hudson Trading Group LLC, после чего присылает Вам на электронную почту скан договора для подписания.</p>
+                                                <p>Далее Вам необходимо подписать договор и отправить его скан или фото нам на электронную почту.</p>
+                                                <p>С этого момента Вы можете покупать и продавать акции IPO с нами, зарабатывая на разнице курсов.</p>
+                                                <p>При этом, снимать, пополнять и распоряжаться лицевым счетом может только инвестор (то есть Вы), заявки на вывод осуществляются брокером строго на счет владельца счета.</p>
+                                                <p>ВАРИАНТ № 2</p>
+                                                <p>Мы регистрируем для Вас счет у брокера самостоятельно и совершаем сделки от своего имени, показывая отчеты об их совершении.</p>
+
+                                                <p>Для этого Вам необходимо оплатить курс обучения финансовой грамотности и основам инвестирования (ссылка оплатить курс обучения)               в формате видео урока(ов) в объеме в зависимости от суммы инвестирования.</p>
+                                                <p>Вся сумма денежных средств, оплаченных Вами за курсы обучения                за минусом DUTY поступает на счет брокера для работы в  Портфеле №3 «IPO».</p>
+                                                <p>Условия работы и выплат, а также размеры комиссий за обслуживание счета сохраняются те же, что и при самостоятельном открытии счета.</p>
+
+                                                <p>Как пополнить Портфель №2 «IPO»</p>
+                                                <p>ВАРИАНТ №1</p>
+                                                <p>ШАГ №1 Для пополнения счета Вам необходимо осуществить перевод денежных средств в долларах США на реквизиты, указанные в договоре.</p>
+                                                <p>Для этого с подписанным договором прийти в банк (выгоднее всего осуществлять перевод через АО «Райффазенбанк»), либо в любой другой банк.</p>
+                                                <p>ШАГ №2 Оплатить DUTY в размере 6% от суммы депозита на реквизиты компании Global Big Bell любым удобным для Вас способом.</p>
+                                                <p>ВАРИАНТ №2</p>
+                                                <p>При 2 варианте регистрации счета Инвестор производит оплату любым доступным и удобным ему способом (ссылка внести денежные средства в личный кабинет).</p>
+                                                <p>Узнать «Как пополнить баланс?» (ссылка)</p>
+                                                <p>При этом в личном кабинете проекта GBB Вы увидите поступившие денежных средств, далее их необходимо перевести в Портфель №2 «IPO».</p>
+                                                <p>С этого момента денежные средства отправляются в работу.</p>
+                                                <p>Отчетный период наступает по истечении месяца, либо по выходу каких-либо первичных акций на рынок.</p>
+
+
+
+
+
+
+
+
 
 
 
