--- a/templates/services/ipo.html.twig
+++ b/templates/services/ipo.html.twig
@@ -53,7 +53,7 @@
                                                 <button onclick="location.href='/docs/ipo_doc.docx'" style="color: #f2f3f3;
                                     background-color: #4caf50;
                                     border-color: #4caf50;" type="button" class=" btn btn-block ink-reaction btn-default-bright" >
-                                                    скачать версию в word.doc
+                                                    скачать версию в формате word.doc
                                                 </button>
 
 
@@ -79,23 +79,72 @@
                                                 <p>•	Ввод/вывод средств без комиссии*</p>
                                                 <p>•	Вам не нужно тратить время на изучение инструмента, доверяйте профессионалам.</p>
 
-                                                <p>Основные характеристики</p>
-                                                <p>Основные характеристики портфеля №2</p>
-                                                <p>Показатели</p>
-                                                <p>Доходность</p>
-                                                <p>до 100% - годовых</p>
-                                                <p>Риск</p>
-                                                <p>до 20-30 % от депо</p>
-                                                <p>Минимальная сумма входа</p>
-                                                <p>1000$</p>
-                                                <p>Частота выплат</p>
-                                                <p>На второй день после выхода акций на рынок</p>
-                                                <p>Минимальный срок работы портфеля</p>
-                                                <p>2 дня</p>
-                                                <p>Вывод тела депозита</p>
-                                                <p>да</p>
-                                                <p>Стратегия инвестирования</p>
-                                                <p>среднесрочная и долгосрочная</p>
+
+
+
+                                                <table class="table table-bordered table-dark">
+                                                    <thead>
+                                                    <tr>
+                                                        <th scope="col">#</th>
+                                                        <th scope="col">Основные характеристики портфеля </th>
+                                                        <th scope="col">Показатели</th>
+
+                                                    </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                    <tr>
+                                                        <th scope="row">1</th>
+                                                        <td>Доходность</td>
+                                                        <td>до 100% - годовых</td>
+
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">2</th>
+                                                        <td>Риск</td>
+                                                        <td>до 20-30 % от депо</td>
+
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">3</th>
+                                                        <td>Минимальная сумма входа</td>
+                                                        <td>1000$</td>
+
+                                                    </tr>
+
+
+                                                    <tr>
+                                                        <th scope="row">4</th>
+                                                        <td>Частота выплат</td>
+                                                        <td>На второй день после выхода акций на рынок</td>
+
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">5</th>
+                                                        <td>Минимальный срок работы портфеля</td>
+                                                        <td>2 дня </td>
+
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">6</th>
+                                                        <td>Вывод тела депозита</td>
+                                                        <td>да</td>
+
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">6</th>
+                                                        <td>Стратегия инвестирования</td>
+                                                        <td>среднесрочная и долгосрочная</td>
+
+                                                    </tr>
+
+                                                    </tbody>
+                                                </table>
+
+
+
+
+
+
 
                                                 <p>*Комиссия взимается брокером за брокерское обслуживание счета                     в размере 1,5 % от суммы депозита в месяц и 15% от суммы чистой прибыли (только при совершении успешных сделок).</p>
                                                 <p>Проект GBB оставляет за собой право удержания комиссии согласно договору и приложению к нему и распределения прибыли в  следующих пропорциях:</p>
@@ -105,7 +154,7 @@
                                                 <p>При этом, комиссионные должны быть переведены Инвестором на реквизиты компании GBB любым удобным доступным способом не позднее 5 дней                  с момента закрытия успешных сделок. В случае нарушения сроков Инвестор несет ответственность согласно договору.</p>
                                                 <p>Как зарегистрироваться в Портфель №2 «IPO»</p>
                                                 <p>ВАРИАНТ №1</p>
-                                                <p>Для регистрации в проекте Вам необходимо открыть счет в долларах в банке АО «Райффазенбанк» (ссылка https://www.raiffeisen.ru/retail/cards/debit/).</p>
+                                                <p>Для регистрации в проекте Вам необходимо открыть счет в долларах в банке АО «Райффазенбанк» (  <a style="color: #0a6ebd;" href="https://www.raiffeisen.ru/retail/cards/debit/"> ссылка </a>).</p>
                                                 <p>Далее прислать нам (ссылка на обратную форму) реквизиты счета и копию паспорта (фото+прописка).</p>
                                                 <p>После этого наш сотрудник открывает для Вас счет в брокере Hudson Trading Group LLC, после чего присылает Вам на электронную почту скан договора для подписания.</p>
                                                 <p>Далее Вам необходимо подписать договор и отправить его скан или фото нам на электронную почту.</p>
